@@ -1,5 +1,10 @@
 2005-07-26  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/ifscompose/ifscompose.c: change the cursor with the tool
+	(bug #90519).
+
+2005-07-26  Sven Neumann  <sven@gimp.org>
+
 	* tools/gimp-remote.c: fixed signedness warnings.
 
 2005-07-25  Maurits Rijk  <m.rijk@chello.nl>
